Applied some old changes